--- a/galeria.html
+++ b/galeria.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </nav>
-    <!--comienzo del contenido0-->
+    <!--comienzo del contenido-->
     <section class="containter-fluid">
         <div class="row p-5">
             
