--- a/galeria.html
+++ b/galeria.html
@@ -37,7 +37,19 @@
     </nav>
     <!--comienzo del contenido-->
     <section class="containter-fluid">
-        <div class="row p-5">
+        <div class="row row1 p-5">
+          <div class="imagen"><a href="images/1.jpg"><img src="images/1.jpg" alt="imagen de galería"></a></div>
+          <div class="imagen"><a href="images/2.jpg"><img src="images/2.jpg" alt=""></a></div>
+          <div class="imagen"><a href="images/6.jpg"><img src="images/6.jpg" alt=""></a></div>
+          <div class="imagen"><a href="images/12.jpg"><img src="images/12.jpg" alt=""></a></div>
+          <div class="imagen"><a href="images/14.jpg"><img src="images/14.jpg" alt=""></a></div>
+          <div class="imagen"><a href="images/18.jpg"><img src="images/18.jpg" alt=""></a></div>
+          <div class="imagen"><a href="images/19.jpg"><img src="images/19.jpg" alt=""></a></div>
+          <div class="imagen"><a href="images/21.jpg"><img src="images/21.jpg" alt=""></a></div>
+          <div class="imagen"><a href="images/CRANEO NFT 1.jpg"><img src="images/CRANEO NFT 1.jpg" alt=""></a></div>
+
+
+
             
         </div>
     </section>
