--- a/galeria.html
+++ b/galeria.html
@@ -36,22 +36,22 @@
         </div>
     </nav>
     <!--comienzo del contenido-->
-    <section class="containter-fluid">
-        <div class="row row1 p-5">
-          <div class="imagen"><a href="images/1.jpg"><img src="images/1.jpg" alt="imagen de galería"></a></div>
-          <div class="imagen"><a href="images/2.jpg"><img src="images/2.jpg" alt=""></a></div>
-          <div class="imagen"><a href="images/6.jpg"><img src="images/6.jpg" alt=""></a></div>
-          <div class="imagen"><a href="images/12.jpg"><img src="images/12.jpg" alt=""></a></div>
-          <div class="imagen"><a href="images/14.jpg"><img src="images/14.jpg" alt=""></a></div>
-          <div class="imagen"><a href="images/18.jpg"><img src="images/18.jpg" alt=""></a></div>
-          <div class="imagen"><a href="images/19.jpg"><img src="images/19.jpg" alt=""></a></div>
-          <div class="imagen"><a href="images/21.jpg"><img src="images/21.jpg" alt=""></a></div>
-          <div class="imagen"><a href="images/CRANEO NFT 1.jpg"><img src="images/CRANEO NFT 1.jpg" alt=""></a></div>
-
-
-
-            
+    <!-- comienza la galería de imagenes-->
+    <h1>Galería</h1>
+    <section class="gallery-container">
+        <div class="col">
+          <img src="images/1.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/2.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/3.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/4.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/5.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/6.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/7.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/8.jpg" class="img-thumbnail" alt="img-thumbnail">
+          <img src="images/9.jpg" class="img-thumbnail" alt="img-thumbnail">
         </div>
+   
+    
     </section>
 
     <footer>
