agregué las secciones quien, servicios, contacto

--- a/galeria.html
+++ b/galeria.html
@@ -38,31 +38,37 @@
     <!--comienzo del contenido-->
     <!-- comienza la galería de imagenes-->
     <h1>Galería</h1>
-    <section class="gallery-container">
-        <div class="col">
-          <img src="images/1.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/2.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/3.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/4.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/5.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/6.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/7.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/8.jpg" class="img-thumbnail" alt="img-thumbnail">
-          <img src="images/9.jpg" class="img-thumbnail" alt="img-thumbnail">
-        </div>
-   
-    
+    <section class="container-gallery p-5">
+      <div><a href="images/1.jpg"><img src="images/1.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+      <div><a href="images/2.jpg"><img src="images/2.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+      <div><a href="images/3.jpg"><img src="images/3.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
     </section>
+
+    <section class="container-gallery p-5">
+      <div><a href="images/4.jpg"><img src="images/4.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+      <div><a href="images/5.jpg"><img src="images/5.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+      <div><a href="images/6.jpg"><img src="images/6.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+    </section>
+
+    <section class="container-gallery p-5">
+
+      <div><a href="images/7.jpg"><img src="images/7.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+      <div><a href="images/8.jpg"><img src="images/8.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+      <div><a href="images/9.jpg"><img src="images/9.jpg" class="img-thumbnail" alt="img-thumbnail"></a></div>
+
+
+    </section>
+    <!--fin de la galería-->
 
     <footer>
 
-      <div class="container-fluid">
+      <div class="container-fluid footer">
         <div class="row p-5 bg-color text-dark">
-          <div class="row"></div>
+          
 
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/insta-logo.png" alt="" class="bg-insta"></div>
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/face-logo.png" alt=""></div>
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/what-logo.png" alt=""></div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col"><a href="https://www.instagram.com/pablo.hauteville"><img src="images/insta-logo.png" alt="" class="bg-insta"></a></div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col"><a href="https://www.facebook.com/Pablo.Hauteville"><img src="images/face-logo.png" alt=""></a></div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col"><a href="https://web.whatsapp.com/"><img src="images/what-logo.png" alt=""></a></div>
           <div class="col-lg-3 col-md-6 col col-sm-12">
             <p class="h5 text-center">Contactanos a travez de nuestas redes sociales</p>
           </div>
