--- a/index.html
+++ b/index.html
@@ -38,17 +38,23 @@
   </nav>
   <section class="containter-fluid">
     <div class="row p-5">
-      <div class="col-xl-6 col-md-12 col-sm-12"><img src="images/IMG_20200812_154927_1.jpg" alt="imagen de presentacion home" class="fotoHome img-fluid"></div>
+      <div class="col-xl-6 col-md-12 col-sm-12"><img src="images/IMG_20200812_154927_1.jpg"
+          alt="imagen de presentacion home" class="fotoHome img-fluid"></div>
       <div class="col-xl-6 col-md-12 col-sm-12">
         <h1>Acerca de mi sitio</h1>
-        <p class="parrafoHome p-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi architecto eius cupiditate rem deserunt ex
+        <p class="parrafoHome p-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi architecto eius
+          cupiditate rem deserunt ex
           a nobis quam eos inventore? Praesentium eveniet similique fuga quod minus ducimus, delectus repudiandae
-          officia? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, voluptatibus. 
+          officia? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, voluptatibus.
           Ullam illo enim repellendus nemo voluptates autem tempore ipsa placeat.
-           Minus atque omnis soluta eos, id velit inventore laboriosam nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-           Eveniet nemo, velit earum officiis et ut ex laborum doloribus sit. Odit magnam quia ex nulla quaerat perspiciatis? Adipisci eius modi porro.</p>
+          Minus atque omnis soluta eos, id velit inventore laboriosam nisi. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit.
+          Eveniet nemo, velit earum officiis et ut ex laborum doloribus sit. Odit magnam quia ex nulla quaerat
+          perspiciatis? Adipisci eius modi porro.</p>
       </div>
     </div>
+  </section>
+  <!--fin del contenido-->
 
     <footer>
 
@@ -56,9 +62,9 @@
         <div class="row p-5 bg-color text-dark">
           
 
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/insta-logo.png" alt="" class="bg-insta"></div>
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/face-logo.png" alt=""></div>
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/what-logo.png" alt=""></div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col"><a href="https://www.instagram.com/pablo.hauteville"><img src="images/insta-logo.png" alt="" class="bg-insta"></a></div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col"><a href="https://www.facebook.com/Pablo.Hauteville"><img src="images/face-logo.png" alt=""></a></div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col"><a href="https://web.whatsapp.com/"><img src="images/what-logo.png" alt=""></a></div>
           <div class="col-lg-3 col-md-6 col col-sm-12">
             <p class="h5 text-center">Contactanos a travez de nuestas redes sociales</p>
           </div>
