--- a/quien.html
+++ b/quien.html
@@ -1,73 +1,128 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-
-</head>
-
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg bg-color">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/Firmalogo.png" alt="Logo marca"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img src="images/Firmalogo.png" alt="Logo marca"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <!--inicio del header-->
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-link colorin" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link colorin" href="quien.html"><b>Quien soy</b></a>
-                    <a class="nav-link colorin" href="servicios.html">Servicios</a>
-                    <a class="nav-link colorin" href="galeria.html">Galería</a>
-                    <a class="nav-link colorin" href="contacto.html">Contacto</a>
-
-                </div>
-                <!--Fin del header-->
-            </div>
+        <!--inicio del header-->
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link colorin" aria-current="page" href="index.html"
+              >Home</a
+            >
+            <a class="nav-link colorin" href="quien.html"><b>Quien soy</b></a>
+            <a class="nav-link colorin" href="servicios.html">Servicios</a>
+            <a class="nav-link colorin" href="galeria.html">Galería</a>
+            <a class="nav-link colorin" href="contacto.html">Contacto</a>
+          </div>
+          <!--Fin del header-->
         </div>
+      </div>
     </nav>
     <!--comienzo del contenido-->
     <section class="containter-fluid">
-        <div class="row p-5">
-           
+      <div class="row p-5">
+        <div class="col-xl-6 col-md-12 col-sm-12">
+          <h1>Quién soy</h1>
+          <p class="parrafoHome p-5">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+            architecto eius cupiditate rem deserunt ex a nobis quam eos
+            inventore? Praesentium eveniet similique fuga quod minus ducimus,
+            delectus repudiandae officia? Lorem ipsum dolor sit amet
+            consectetur, adipisicing elit. Quos, voluptatibus. Ullam illo enim
+            repellendus nemo voluptates autem tempore ipsa placeat. Minus atque
+            omnis soluta eos, id velit inventore laboriosam nisi.
             
+            <p class="parrafoHome p-5">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatibus velit perferendis ea tempora explicabo, repellat libero
+              ab laudantium, fugit enim provident, pariatur sequi consequatur
+              cumque doloremque! Modi fugit ab explicabo.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatibus velit perferendis ea tempora explicabo, repellat libero
+              ab laudantium, fugit enim provident, pariatur sequi consequatur
+              cumque doloremque! Modi fugit ab explicabo.
+            </p>
+          </p>
+          <p class="parrafoHome p-5">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Voluptatibus velit perferendis ea tempora explicabo, repellat libero
+            ab laudantium, fugit enim provident, pariatur sequi consequatur
+            cumque doloremque! Modi fugit ab explicabo.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Voluptatibus velit perferendis ea tempora explicabo, repellat libero
+            ab laudantium, fugit enim provident, pariatur sequi consequatur
+            cumque doloremque! Modi fugit ab explicabo.
+          </p>
         </div>
+        <div class="col-xl-6 col-md-12 col-sm-12">
+          <img
+            src="images/fotoperfil.jpg"
+            alt="imagen de perfil"
+            class="foto-perfil img-fluid"
+          />
+        </div>
+      </div>
     </section>
 
     <footer>
-
-      <div class="container-fluid">
+      <div class="container-fluid footer">
         <div class="row p-5 bg-color text-dark">
-          <div class="row"></div>
-
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/insta-logo.png" alt="" class="bg-insta"></div>
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/face-logo.png" alt=""></div>
-          <div class="col-sm-4 col-lg-3 col-md-2 col"><img src="images/what-logo.png" alt=""></div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col">
+            <a href="https://www.instagram.com/pablo.hauteville"
+              ><img src="images/insta-logo.png" alt="" class="bg-insta"
+            /></a>
+          </div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col">
+            <a href="https://www.facebook.com/Pablo.Hauteville"
+              ><img src="images/face-logo.png" alt=""
+            /></a>
+          </div>
+          <div class="col-sm-4 col-lg-3 col-md-2 col">
+            <a href="https://web.whatsapp.com/"
+              ><img src="images/what-logo.png" alt=""
+            /></a>
+          </div>
           <div class="col-lg-3 col-md-6 col col-sm-12">
-            <p class="h5 text-center">Contactanos a travez de nuestas redes sociales</p>
+            <p class="h5 text-center">
+              Contactanos a travez de nuestas redes sociales
+            </p>
           </div>
         </div>
       </div>
     </footer>
 
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
-    </script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
